--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			</ul>
 		</div>
 		<div id = "navigationBlock">
+			<h2>Navigate</h2>
 			<ul id = "navigationList">
 				<li>home</li>
 				<li>Missions</li>
@@ -27,6 +28,7 @@
 			</ul>
 		</div>
 		<div id = "summaryBlock">
+			<h2>Progress</h2>
 			<p>User summary (icon, level, mission status bar)</p>
 		</div>
 		
