--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 		<div id = "bodyBlock">
 			<h1>Missions</h1>
 			<ul id = "missionsList">
-				<li>Be cool</li>
 				<li>Be real</li>
 				<li>Be freaky</li>
 				<li>Be awesome</li>
+				<li>Be ballin</li>
 				<li>Be Taha</li>
 			</ul>
 		</div>
 		<div id = "navigationBlock">
 			<h2>Navigate</h2>
 			<ul id = "navigationList">
-				<li>home</li>
+				<li>Home</li>
 				<li>Missions</li>
 				<li>Journal</li>
 				<li>About</li>
